# scientific-paper-pdf-rename

./: .gitignore  MANIFEST.in  README.adoc  README.md  build_distribution.sh  generate_distribution.sh  install_package_locally.sh  pyproject.toml  requirements.txt  sci_rename.py  set_virtual_env.sh  setup.cfg  unix_install.sh  upload_distribution_to_TestPyPI.sh
examples/: reset_examples.sh
sci_paper_rename/: __main__.py  helper.py
src/: helper.py
src/sci_paper_renamer/: sci_renamer.py
tests/: test_hash.py  test_move.py  test_parse.py
