[metadata]
name = scientific-paper-pdf-rename
version = 0.8
author = Heverson B. Ribeiro    
author_email = heversonbr@gmail.com
description = A tool for renaming the pdf filename of scientific papers according their title. Scans the pdf for finding its title. 
long_description = file: README.adoc
long_description_content_type = text/asciidoc
url = https://github.com/heversonbr/sci-paper-renamer
project_urls =
    Bug Tracker = https://github.com/heversonbr/sci-paper-renamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src