# If setup.py is missing from the project directory when a PEP 517 build is invoked, 
# setuptools emulates a dummy setup.py file containing only a setuptools.setup() call.


[metadata]

name = test-scientific-paper-rename
version = 0.9
author = Heverson B. Ribeiro    
author_email = heversonbr@gmail.com
description = A tool to rename the pdf filename of scientific papers according their title. It scans the pdf to find its title. 
url = https://github.com/heversonbr/scientific-paper-pdf-rename
project_urls =
    Bug Tracker = https://github.com/heversonbr/scientific-paper-pdf-rename/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
python_requires = >=3.7

[options.packages.find]
where = src